src/pages/Project.css
.header {
  height: 90vh;
  padding-top: 41vh;
  z-index: 1;
  padding-left: 10vw;
  padding-right: 5vw;
}

.header-container-project {
  color: white;
  width: 100vw;
}
.header-container-project img {
  transform: scaleX(-1);
  background-size: cover;
  position: absolute;
  z-index: -1;
  padding: 0;
}

.square {
  background-color: white;
  color: black;
  padding: 40px 25px 40px 25px;
  background: rgb(255, 255, 255);
  box-shadow: 2px 17px 24px -4px rgba(0, 0, 0, 0.15);
  -webkit-box-shadow: 2px 17px 24px -4px rgba(0, 0, 0, 0.15);
  -moz-box-shadow: 2px 17px 24px -4px rgba(0, 0, 0, 0.15);
}

.squares {
  position: relative;
  top: -70px;
}
.project-container {
  width: 100%;
  overflow-x: hidden;
}

.fade-overlay-2 {
  position: absolute;
  height: 100%;
  width: 100%;
  opacity: 0;
  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 60%, white);
  animation: fadeAnimation 1s ease-in-out forwards;
}

.team {
  padding: 0 15vw 0 15vw;
  margin-top: 5vh;
}

